--- a/ui/src/app/globals.css
+++ b/ui/src/app/globals.css
@@ -1,26 +1,33 @@
 @import "tailwindcss";
 
+/* @import url('https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&display=swap'); */
+
 :root {
   --background: #ffffff;
-  --foreground: #171717;
-}
-
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+  --foreground: #232323;
+  --color-text-secondary: #4d4d4d;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+    --background: #2a2a2a;
+    --foreground: #f3f3f3;
+    --color-text-secondary: #a5a5a5;
   }
+}
+
+@theme {
+  --color-logo-light: #ffff;
+  --color-button-light: #F8FAFC;
+  --color-logo-dark: #0000;
+  --color-button-dark:#101010;
+  --radius-input: 20px;
+  --radius-button: 30px;
 }
 
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: sans-serif, Helvetica, Arial;
 }
+
